request(menu): fixed overflow of mobile menu.

--- a/src/components/menu/menu.sass
+++ b/src/components/menu/menu.sass
@@ -16,6 +16,8 @@
   background: $white
   width: 25%
   height: 100%
+  overflow: auto
+  padding-bottom: 2em
 
   &--active
     transform: none
